  on Windows. (Sebastian, Edin)
- Improved dba extension (Marcus)
  . Added support for internal error handling of Berkeley db libraries.
  . Disallow Berkeley db versions 4.1.0 to 4.1.24 due to locking problems.
  . Disallow linkage of Berkeley db submodules against libraries with
    different major version.
  . Disallow configuring of more than one Berkeley db handler. 
- Fixed bug #20857 (snmpset() failed always, patch by: rs@epost.de). (Jani)
- Fixed bug #14532 (fixed connection_status() to return 2 for timeouts). (Jani)
- Fixed bug #21525 (bind_textdomain_codeset() now available on Windows). (Edin)
- Fixed bug #21511 (config.status warning). (Jani)
- Fixed bug #21531 (file_exists() and other filestat functions report errors
  when the requested file/directory does not exists). (Sara)
- Fixed bug #21544 (Extended checks for where FreeTDS is installed). (Frank)
- Fixed bug #21523 (number_format could cause a memory allocation for a
  negative memory size in situations where the sprintf implementation of the
  host system generated less decimal places than were requested). (Wez)
- Fixed bug #21529 (memory corruption by fsockopen()). (Ilia)
- Fixed bug #21518 (imagecreatefromstring() crashed when dealing with invalid
  image files). (Ilia)
- Fixed bug #20802 (PHP would die silently when memory limit is reached). 
  (Ilia)
- Fixed bug #21498 (mysql_pconnect connection problems). (Georg)
- Fixed bug #21443 (improper handling of ? surrounded by spaces in
  get_browser()). (Ilia)
- Fixed bug #21297 (in CLI/CGI sapis on the #! it would leave a \n when the
  the code encounters \r\n). (Ilia)
- Fixed bug #21453 (improper handling of non-terminated < by strip_tags()).
  (Ilia)
- Fixed bug #17098 (make Apache2 aware that PHP scripts represent dynamic data
  and should not be cached). (Ilia)
- Fixed bug #21445 (gd unable to open fonts). (Ilia)
- Fixed bug #20503 (imagesetbrush() not available on Windows). (Edin)